# bichon

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/admin/: Cargo.toml
crates/admin/src/: main.rs  meta.rs  migrate.rs  reset.rs
crates/cli/src/mbox/: gmail.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/account/: entity.rs  grant.rs  migration.rs  old_state.rs  payload.rs  since.rs  state.rs  view.rs
crates/core/src/admin/: meta.rs
crates/core/src/autoconfig/: client.rs  load.rs  mod.rs  tests.rs
crates/core/src/cache/imap/: envelope.rs  mailbox.rs  mod.rs  task.rs
crates/core/src/cache/imap/download/: download_folders.rs  download_type.rs  flow.rs  mod.rs  rebuild.rs
crates/core/src/common/: auth.rs  mod.rs  paginated.rs  validator.rs
crates/core/src/context/: executors.rs
crates/core/src/dashboard/: mod.rs
crates/core/src/database/: manager.rs  mod.rs
crates/core/src/envelope/: extractor.rs  utils.rs
crates/core/src/imap/: client.rs  executor.rs  manager.rs  mock_server.rs  mod.rs
crates/core/src/import/: mod.rs
crates/core/src/mailbox/: delete.rs  list.rs  mod.rs  reset.rs
crates/core/src/message/: append.rs  attachment.rs  content.rs  list.rs  search.rs
crates/core/src/migrate/: store.rs
crates/core/src/oauth2/: entity.rs  flow.rs  pending.rs  task.rs  token.rs
crates/core/src/oauth2/refresh/: mod.rs
crates/core/src/settings/: cli.rs  dir.rs  mod.rs  proxy.rs  system.rs
crates/core/src/store/: blob.rs
crates/core/src/store/tantivy/: attachment.rs  dedup.rs  dedup_cache.rs  envelope.rs  mod.rs  model.rs
crates/core/src/tasks/: mod.rs
crates/core/src/token/: mod.rs  payload.rs
crates/core/src/users/: manager.rs  minimal.rs  mod.rs  payload.rs  role.rs
crates/core/src/utils/: encrypt.rs  html.rs  mod.rs  net.rs
crates/memdb/: Cargo.toml
crates/memdb/src/: db.rs  error.rs  lib.rs  query.rs  wal.rs
crates/memdb/tests/: integration.rs  stress.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/common/: auth.rs  validator.rs
crates/server/src/error/: code.rs
crates/server/src/mcp/: mod.rs  tools.rs
crates/server/src/rest/: assets.rs  mod.rs
crates/server/src/rest/api/: access_token.rs  account.rs  attachment.rs  auto_config.rs  import.rs  mailbox.rs  message.rs  oauth2.rs  system.rs  users.rs
crates/server/src/rest/public/: login.rs  oauth2.rs
crates/server/src/tests/: access_token_tests.rs  account_tests.rs  mod.rs  oauth2_tests.rs  proxy_tests.rs  role_tests.rs  system_tests.rs  user_tests.rs
crates/smtp/src/: server.rs
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: index.css  routeTree.gen.ts  theme.css
web/src/api/account/: api.ts
web/src/api/system/: api.ts
web/src/components/: language-switch.tsx  theme-switch.tsx
web/src/components/layout/: fixed-header.tsx  github.tsx  header.tsx  notification.tsx
web/src/context/: search-context.tsx  theme-context.tsx
web/src/features/accounts/: index.tsx
web/src/features/accounts/components/: account-detail.tsx  action-dialog.tsx  download-folders.tsx  running-state-action.tsx  schema.ts  step3.tsx  step4.tsx  table.tsx
web/src/features/accounts/components/__tests__/: schema-edge.test.ts  schema.test.ts
web/src/features/auth/: schema.ts  user-auth-form.tsx
web/src/features/auth/__tests__/: schema.test.ts
web/src/features/dashboard/: index.tsx
web/src/features/oauth2/components/: action-dialog.tsx  schema.ts
web/src/features/oauth2/components/__tests__/: schema.test.ts
web/src/features/search/: contact-popover.tsx  mailbox-popover.tsx  tag-filter-popover.tsx
web/src/features/settings/: index.tsx
web/src/features/settings/access/: index.tsx  permissions-dialog.tsx
web/src/features/settings/appearance/: appearance-form.tsx
web/src/features/settings/configurations/: index.tsx
web/src/features/settings/profile/: profile-form.tsx  schema.ts
web/src/features/settings/profile/__tests__/: schema.test.ts
web/src/features/settings/proxy/components/: action-dialog.tsx  schema.ts
web/src/features/settings/proxy/components/__tests__/: schema.test.ts
web/src/features/users/roles/components/: action-dialog.tsx  permissions-action.tsx  permissions-dialog.tsx  schema.ts
web/src/features/users/roles/components/__tests__/: schema.test.ts
web/src/features/users/users/components/: action-dialog.tsx  schema.ts
web/src/features/users/users/components/__tests__/: schema.test.ts
web/src/locales/: ar.json  da.json  de.json  en.json  es.json  fi.json  fr.json  it.json  jp.json  ko.json  nl.json  no.json  pl.json  pt.json  ru.json  sv.json  zh-tw.json  zh.json
web/src/routes/_authenticated/settings/: access.lazy.tsx
web/src/test/: test-utils.tsx
