[package]
name = "bichon-admin"
version.workspace = true
edition.workspace = true


[dependencies]
bichon-core = { path = "../core" }
tokio.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
native_db = "0.8.2"
native_model = "0.4.20"
serde.workspace = true
serde_json.workspace = true

itertools.workspace = true
snafu.workspace = true
memdb.workspace = true